# note

./: .env  CLAUDE.md  Cargo.toml  Dockerfile  chat.html  docker-compose.yml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
doc/: chat-architecture.md  code-review-2026-02-10.md  progress.md
src/: main.rs
src/config/: config.rs
src/error/: error.rs
src/handlers/: auth.rs  conversation.rs  friendship.rs  mod.rs  note.rs  user.rs  ws.rs
src/middleware/: auth.rs  mod.rs
src/models/: conversation.rs  friendship.rs  mod.rs  note.rs  user.rs
src/routes/: health.rs  mod.rs  ws.rs
src/services/: conversation.rs  friendship.rs  mod.rs  note.rs  user.rs  ws.rs
src/utils/: jwt.rs  mod.rs
