[package]
name = "easynote"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
config = "0.15.9"   
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-actix-web = "0.7.2"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.7.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
futures = "0.3"
bcrypt = "0.18.0"
actix-ws = "0.3.0"
futures-util = "0.3.30"
actix-web-actors = "4.0"
actix = "0.13.5"
clickhouse = "^0.14.2"